--- a/config/wm811k_r18_propos.yml
+++ b/config/wm811k_r18_propos.yml
@@ -5,7 +5,7 @@ acc_grd_step: 8
 momentum_base: 0.996
 momentum_increase: false
 dataset: wm811k
-data_folder: './datasets/Python/data/wm811k/labeled'
+data_folder: '/kaggle/working/data/wm811k/labeled'
 eval_metric:
   - nmi
   - acc
