--- a/config/wm811k_r18_propos.yml
+++ b/config/wm811k_r18_propos.yml
@@ -1,7 +1,7 @@
-batch_size: 64
+batch_size: 128
 num_devices: 1
 num_workers: 4
-acc_grd_step: 8
+acc_grd_step: 4
 momentum_base: 0.996
 momentum_increase: false
 dataset: wm811k
@@ -12,22 +12,22 @@ eval_metric:
   - ari
 whole_dataset: true
 encoder_name: bigresnet18
-epochs: 400
+epochs: 1000
 feat_dim: 256
 hidden_size: 4096
 img_size: 64
 lambda_predictor_lr: 10
-learning_rate: 0.05
+learning_rate: 0.03
 learning_eta_min: 0.
 reassign: 1
 save_freq: 10
-save_checkpoints: true
+save_checkpoints: false
 shuffling_bn: true
 symmetric: true
 temperature: 0.5
 use_gaussian_blur: false
 warmup_epochs: 50
-weight_decay: 0.0005
+weight_decay: 0.0
 
 model_name: propos
 cluster_loss_weight: 0.1
